@@ -485,6 +485,9 @@ exit 0
 %{__includedir}/popt.h
 
 %changelog
+* Thu Aug 19 2004 Jeff Johnson <jbj@jbj.org> 4.3.2-0.7
+- avoid "can't happen" recursion while retrieving pubkeys.
+
 * Fri Jul  9 2004 Jeff Johnson <jbj@jbj.org> 4.3.2-0.6
 - fix: evaluate rather than default file_contexts path. (#127501).
 
